<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/ic_background"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_margin="60dp"
    android:layout_height="wrap_content">
    <Button
        android:layout_width="match_parent"
        android:id="@+id/buttonUserLogin"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selectorbutton"
        android:layout_height="wrap_content"
        android:text="@string/login"/>
    <Button
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:id="@+id/buttonRegister"
        android:background="@drawable/selectorbutton"
        android:layout_height="wrap_content"
        android:text="@string/register"/>
    <Button
        android:layout_width="match_parent"
        android:background="@drawable/selectorbutton"
        android:id="@+id/buttonAdmin"
        android:layout_height="wrap_content"
        android:text="@string/admin_login"/>
</LinearLayout>

</RelativeLayout>