<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:background="@drawable/ic_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_margin="40dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:hint="@string/enter_id"
                 android:maxLines="1"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/ic_mail"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:layout_height="wrap_content"
                android:id="@+id/textInputEditTextId"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="@color/colorWhite"
            app:passwordToggleEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:layout_below="@+id/textInputEditTextEmailId"
                android:id="@+id/textInputEditTextPassword"/>
        </android.support.design.widget.TextInputLayout>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:buttonTint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:id="@+id/checkBox"
            android:layout_marginBottom="@dimen/dimen_20dp"/>
        <Button
            android:layout_width="match_parent"
            android:background="@drawable/selectorbutton"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/buttonLoginAdmin"/>
    </LinearLayout>
</ScrollView>


