<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/ic_recycler_view"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="1dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textAlignment="viewEnd"
            android:text="@string/id"
            android:id="@+id/textId"/>
        <TextView
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:id="@+id/textcolon0"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_toRightOf="@+id/textFirstName"/>
        <TextView
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@+id/textcolon1"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:id="@+id/textViewId"/>
        <TextView
            android:textColor="@color/colorWhite"
            android:textAlignment="viewEnd"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:layout_below="@+id/textId"
            android:id="@+id/textFirstName"/>
        <TextView
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textcolon0"
            android:text="@string/colon"
            android:id="@+id/textcolon1"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_toRightOf="@+id/textFirstName"/>
        <TextView
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@+id/textcolon1"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewId"
            android:text="@string/first_name"
            android:id="@+id/textViewFirstName"/>
        <TextView
            android:textColor="@color/colorWhite"
            android:textAlignment="viewEnd"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:layout_below="@+id/textFirstName"
            android:id="@+id/textLastName"/>
        <TextView
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:layout_below="@+id/textcolon1"
            android:id="@+id/textColon2"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_toRightOf="@+id/textLastName"/>
        <TextView
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@+id/textColon2"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewFirstName"
            android:text="last name"
            android:id="@+id/textViewLastName"/>
        <TextView
            android:textColor="@color/colorWhite"
            android:textAlignment="viewEnd"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_email_id"
            android:layout_below="@+id/textLastName"
            android:id="@+id/textEmail"/>
        <TextView
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textColon3"
            android:text="@string/colon"
            android:layout_below="@+id/textColon2"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_toRightOf="@+id/textEmail"/>
        <TextView
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@+id/textColon3"
            android:layout_below="@+id/textViewLastName"
            android:layout_height="wrap_content"
            android:text="@string/email_id"
            android:id="@+id/textViewEmailId"/>
        <TextView
            android:textColor="@color/colorWhite"
            android:textAlignment="viewEnd"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_below="@+id/textEmail"
            android:id="@+id/textpassword"/>
        <TextView
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_below="@+id/textColon3"
            android:id="@+id/textColon4"
            android:layout_toRightOf="@+id/textpassword"/>
        <TextView
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@+id/textColon4"
            android:layout_below="@+id/textViewEmailId"
            android:layout_height="wrap_content"
            android:text="Password"
            android:id="@+id/textViewPassword"/>
        <TextView
            android:textAlignment="viewEnd"
            android:textColor="@color/colorWhite"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Mobile No"
            android:layout_below="@+id/textpassword"
            android:id="@+id/textMobileNo"/>
        <TextView
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:id="@+id/textColon5"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_toRightOf="@+id/textMobileNo"
            android:layout_below="@+id/textColon4"/>
        <TextView
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@+id/textColon5"
            android:layout_below="@+id/textViewPassword"
            android:layout_height="wrap_content"
            android:text="Mobile No"
            android:id="@+id/textViewMobileNo"/>
        <TextView
            android:textColor="@color/colorWhite"
            android:textAlignment="viewEnd"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="DOB"
            android:layout_below="@+id/textMobileNo"
            android:id="@+id/textDob"/>
        <TextView
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:id="@+id/textColon6"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_below="@+id/textMobileNo"
            android:layout_toRightOf="@id/textDob"/>
        <TextView
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@+id/textColon6"
            android:layout_below="@+id/textViewMobileNo"
            android:layout_height="wrap_content"
            android:text="DOB"
            android:id="@+id/textViewDob"/>


    </RelativeLayout>
</RelativeLayout>