<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:paddingTop="@dimen/dimen_20dp"
    android:paddingBottom="@dimen/dimen_20dp"
    android:paddingLeft="@dimen/dimen_20dp"
    android:paddingRight="@dimen/dimen_20dp"
    android:background="@drawable/ic_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/dimen_20dp"
        android:id="@+id/linearLayoutCompat"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:id="@+id/textinputLayout"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

             <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:elevation="3dp"
                 app:cardCornerRadius="50dp"
                 android:innerRadius="0dp"
                 android:thicknessRatio="1.9"
                 android:shape="ring"
                 card_view:cardCornerRadius="5dp">

             <ImageView
                android:layout_gravity="center"
                android:id="@+id/image"
                 android:background="@drawable/ic_placeholder"
                 android:cropToPadding="true"
                android:scaleType="centerInside"
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="@dimen/dimen_100dp" />
            </android.support.v7.widget.CardView>


        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/error"
            android:visibility="invisible"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:background="#000000"
            android:drawableRight="@drawable/ic_error"
            android:text="@string/image_is_mandatory"/>
        <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="@dimen/dimen_15sp"
    android:textColor="@color/colorWhite"
    android:layout_marginTop="@dimen/dimen_15dp"
    android:id="@+id/textViewFirstName"
    tools:ignore="SpUsage"
    android:text="@string/enter_first_name"
    />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:paddingLeft="@dimen/dimen_10dp"
                android:inputType="text"
                android:lines="1"
                android:background="@drawable/background_edit_text"
                android:paddingTop="@dimen/dimen_5dp"
                android:paddingBottom="@dimen/dimen_5dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTextFirstName"
                />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_15sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:id="@+id/textViewLastName"
            tools:ignore="SpUsage"
            android:text="@string/enter_last_name"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayoutLastName">

            <EditText
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/background_edit_text"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/dimen_5dp"
                android:paddingBottom="@dimen/dimen_5dp"
                android:lines="1"
                android:inputType="text"
                android:textSize="@dimen/dimen_20sp"
                android:id="@+id/editTextLastName"
                />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_15sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:id="@+id/textViewEmailId"
            android:text="@string/enter_email_id"
            tools:ignore="SpUsage" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayoutEmailId">

            <EditText
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:background="@drawable/background_edit_text"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dimen_5dp"
                android:lines="1"
                android:paddingTop="@dimen/dimen_5dp"
                android:inputType="textEmailAddress"
                android:id="@+id/editTextEmailId"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_15sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:id="@+id/textViewPhoneNo"
            android:text="@string/enter_phone_number"
            tools:ignore="SpUsage" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayoutPhoneNumber">

            <EditText
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/background_edit_text"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_5dp"
                android:lines="1"
                android:paddingBottom="@dimen/dimen_5dp"
                android:paddingLeft="@dimen/dimen_10dp"
                android:inputType="phone"
                android:id="@+id/editTextPhoneNumber"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_15sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:id="@+id/textViewDateOfBirth"
            android:text="@string/enter_date_of_birth"
            tools:ignore="SpUsage" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayoutDateOfBirth">
            <EditText
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:onClick="onClick"
                android:drawableRight="@drawable/ic_date1"
                android:background="@drawable/background_edit_text"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dimen_10dp"
                android:paddingBottom="@dimen/dimen_5dp"
                android:lines="1"
                android:paddingTop="@dimen/dimen_5dp"
                android:id="@+id/editTextDateOfBirth" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_15sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:id="@+id/textViewPasseord"
            android:text="@string/enter_password"
            tools:ignore="SpUsage" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:id="@+id/textInputLayoutPassword">
            <EditText
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/background_edit_text"
                android:layout_height="35dp"
                android:lines="1"
                android:paddingLeft="@dimen/dimen_10dp"
                android:inputType="textPassword"
                android:id="@+id/editTextPassword" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_15sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:id="@+id/textViewConfirmPassword"
            android:text="@string/confirm_password"
            tools:ignore="SpUsage" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:id="@+id/textInputLayoutReEnterPassword">
            <EditText
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/background_edit_text"
                android:layout_height="35dp"
                android:lines="1"
                android:paddingLeft="@dimen/dimen_10dp"
                android:inputType="textPassword"
                android:id="@+id/editTextReEnterPassword"
                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:textColor="@color/colorLime"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:background="@drawable/selectorbutton"
            android:id="@+id/buttonRegister1"
            android:text="register"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewLoginLink"
            android:gravity="center"
            android:visibility="visible"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="@dimen/dimen_40dp"
            android:text="@string/already_a_member_login"
            />
    </LinearLayout>
</ScrollView>